--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Web Application for Robotics Education</h1>
-          <span class="fw-bold fs-2 mb-3">Team 17</span>
-          <span class="fs-5" data-aos="fade-up" data-aos-delay="400">CS 426 Senior Project in Computer Science<br>Spring
+          <span class="fw-bold fs-2 mb-3" data-aos="fade-up" data-aos-delay="400">Team 17</span>
+          <span class="fs-5" data-aos="fade-up" data-aos-delay="500">CS 426 Senior Project in Computer Science<br>Spring
             2021<br>University of Nevada, Reno<br> Computer Science & Engineering Department</span>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
