--- a/index.html
+++ b/index.html
@@ -45,37 +45,17 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <i class="bi-joystick" style="font-size:25px; margin-right:5px;"></i>
-        <span>WARE</span>
+        <i class="bi-joystick" style="color: #7A87F5; font-size:25px; margin-right:10px;"></i>
+        <span>ware</span>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link active " href="#">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="nav-link active" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="#description">Description</a></li>
+          <li><a class="nav-link scrollto" href="#services">References</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Team</a></li>
+          <li><a class="nav-link scrollto" href="#team">Advisors</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -88,13 +68,13 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center">
+        <div class="col-lg-12 text-center d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Web Application for Robotics Education</h1>
-          <span class="fw-bold fs-2 mb-3" data-aos="fade-up" data-aos-delay="400">Team 17</span>
-          <span class="fs-5" data-aos="fade-up" data-aos-delay="500">CS 426 Senior Project in Computer Science<br>Spring
+          <span class="fw-bold fs-2 mb-3" data-aos="fade-up" data-aos-delay="400" style="color: #eee;">Team 17</span>
+          <span class="fs-5" data-aos="fade-up" data-aos-delay="500" style="color: #eee;">CS 426 Senior Project in Computer Science<br>Spring
             2021<br>University of Nevada, Reno<br> Computer Science & Engineering Department</span>
           <div data-aos="fade-up" data-aos-delay="600">
-            <div class="text-center text-lg-start">
+            <div class="text-center">
               <a href="#about"
                 class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Learn more</span>
@@ -103,9 +83,6 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
-        </div>
       </div>
     </div>
 
@@ -113,26 +90,37 @@
 
   <main id="main">
     <!-- Feature Tabs -->
-    <section id="description" class="description py-5">
-      <div class="container">
-        <div class="row feture-tabs" data-aos="fade-up">
-          <div class="col-lg-6">
-            <h2 class="fw-bolder">Project Description</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.</p>
-
+    <section id="description" class="description">
+      <div class="container-fluid">
+        <div class="row gx-0" data-aos="fade-up">
+          <div class="col-lg-7 d-flex flex-column justify-content-center">
+            <div class="content rounded-3">
+              <h2 class="fw-bold text-uppercase fs-5" style="color: #4154f1;">Project Description</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                  ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+            </div>
           </div>
 
-          <div class="col-lg-6">
-            <img src="assets/img/features-2.png" class="img-fluid" alt="">
+          <div class="col-lg-5" data-aos="zoom-out">
+            <img src="assets/img/sai-kiran-anagani-Tjbk79TARiE-unsplash.jpg" class="img-fluid shadow-lg" alt="" style="border-radius: 50px 5px 50px 5px;">
           </div>
 
         </div><!-- End Feature Tabs -->
