--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#">Home</a></li>
-          <li><a class="nav-link scrollto" href="#description">Description</a></li>
-          <li><a class="nav-link scrollto" href="#references">References</a></li>
+          <li><a class="nav-link scrollto" href="#description">About</a></li>
+          <li><a class="nav-link scrollto" href="#references">Resources</a></li>
           <li><a class="nav-link scrollto" href="#people">People</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -75,7 +75,7 @@
             2021<br>University of Nevada, Reno<br> Computer Science & Engineering Department</span>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center">
-              <a href="#about"
+              <a href="#description"
                 class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Learn more</span>
                 <i class="bi bi-arrow-down"></i>
