Add problem domain book entry to resources section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+            <div class="service-box pink">
+              <i class="bi-book icon" style="padding: 25px;"></i>
+              <h3>Problem Domain Book
+              </h3>
+              <p> Robotics in STEM Education<br>Khine, Myint Swe
+              </p>
+              <a href="https://www.amazon.com/dp/3319577859" class="read-more"><span>Read More</span> <i class="bi bi-arrow-up-right"></i></a>
+            </div>
+          </div>
+
         </div>
 
       </div>
